--- a/main.tex
+++ b/main.tex
@@ -117,7 +117,7 @@
 \subsection{Quantmetry}
 \location{Paris, France | Sept 2019 - Today}
 \descript{Data Scientist}
-\longdescript{Working as a Data Scientist consultant for various projects and companies. Developing solutions and interacting extensively with clients.  \\ \textbf{NLP} : Developing, for a medical news company, tools enabling the profiling and clustering of doctors by using NLP techniques and dimension reduction on the content of the media. \\ \textbf{NLP} : Creation of supporting material, practical exercises and training given to other Data Scientists on latest NLP subjects. \\ \textbf{Time Series ans Supply Chain} : Developing, for a wholesaler, of a tailored solution in supply. Including a sales prediction module at the SKU level, and a supply optimisation module. Using Deep Learning approaches and constrained optimisation methods.\\ \textbf{Data Engineering} : Developing infrastructures and CI/CD pipelines for the French Ministry of Health in support of the internal Covid-19 Data platform\\ \textbf{Computer Vision} : Developing, for a fashion startup, image segmentation models by using \textbf{Computer Vision} techniques and \textbf{Deep Learning} on Pytorch. Deployed with Django APIs on Google Cloud Platform. } 
+\longdescript{Working as a Data Scientist consultant for various projects and companies. Developing solutions and interacting extensively with clients.  \\ \textbf{NLP} : Developing, for a medical news company, tools enabling the profiling and clustering of doctors by using NLP techniques and dimension reduction on the content of the media. \\ \textbf{NLP} : Creation of supporting material, practical exercises and training given to other Data Scientists on latest NLP subjects. \\ \textbf{Time Series ans Supply Chain} : Developing, for a wholesaler, of a tailored solution in supply. Including a sales prediction module at the SKU level, and a supply optimisation module. Using Deep Learning approaches and constrained optimisation methods.\\ \textbf{Data Engineering} : Developing infrastructures for the French Ministry of Health in support of the internal Covid-19 Data platform. Including Gitlab CI/CD pipelines, Docker runners, sftp servers. \\ \textbf{Computer Vision} : Developing, for a fashion startup, image segmentation models by using \textbf{Computer Vision} techniques and \textbf{Deep Learning} on Pytorch. Deployed with Django APIs on Google Cloud Platform. } 
 \sectionsep
 
 \subsection{Ecole Polytechnique Fédérale de Lausanne | EPFL}
