Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 % Package Imports
 
-\usepackage[a4paper, hmargin=2cm, vmargin=1.5cm]{geometry}
+\usepackage[a4paper, hmargin=2cm, vmargin=1cm]{geometry}
 \usepackage[hidelinks]{hyperref}
 \usepackage[absolute]{textpos}
 \usepackage[UKenglish]{babel}
@@ -93,7 +93,7 @@
 \begin{document}
 %%%%%%%%%%%%%%%%%%%% NAME %%%%%%%%%%%%%%%%%%%% 
 
-\namesection{Adrian}{Löwenstein}{\href{https://www.adrianlwn.com}{\faGlobe{} adrianlwn.com} | \href{https://github.com/adrianlwn}{\faGithubSquare{}  github}  | \href{https://www.linkedin.com/in/adrianloewenstein}{\faLinkedinSquare{}  linkedin} \\ \href{mailto:adrian.loewenstein@icloud.com}{\faEnvelope{} adrian.loewenstein@icloud.com} |  \href{tel:+33767885257}{\faPhoneSquare{} +33 7 67 88 52 57}  \\ French Nationality | Born 21.11.1993 \\[6pt] Machine Learning Engineer with diversified "hands-on" project experience.\\ High-level graduate education background in international environment.\\ Keen to join dynamic and open-minded teams in startup or growth company, \\ focusing on impact-generating innovation.}
+\namesection{Adrian}{Löwenstein}{\href{https://www.adrianlwn.com}{\faGlobe{} adrianlwn.com} | \href{https://github.com/adrianlwn}{\faGithubSquare{}  github}  | \href{https://www.linkedin.com/in/adrianloewenstein}{\faLinkedinSquare{}  linkedin} \\ \href{mailto:adrian.loewenstein@icloud.com}{\faEnvelope{} adrian.loewenstein@icloud.com} |  \href{tel:+33767885257}{\faPhoneSquare{} +33 7 67 88 52 57}  \\ French Nationality | Born 21.11.1993 \\[10pt] Machine Learning Engineer with diversified "hands-on" project experience\\ High-level graduate education background in international environment\\ Keen to join dynamic and open-minded teams in startup or growth company, \\ focusing on impact-generating innovation}
 %{``On ne voit bien qu'avec le cœur. L'essentiel est invisible pour les yeux.''}
 
 %%%%%%%%%%%%%%%%%%%%% EXPERIENCE %%%%%%%%%%%%%%%%%%%%% 
